# gpu_ex

./: README.md
aula13/: ex1  exemplo1  exemplo1-criacao-iteracao.cu  get_prices.cu
aula14/: a.out  ex1.cu
aula15/: a.out  add_ex.cu.save  mat-mult-tile.cu
aula16/: a.out  mat-mult-tile.cu
proj2/: CMakeLists.txt  README.md  tsp-bb.cpp  tsp-locsea-bb.cpp  tsp-locsea.cpp  tsp-par1.cpp  tsp-seq.cpp
proj2/inputs/: in13  in4  in6  in8
proj2/outputs/: out1  out2  out3  out4
proj2/results/: relat_chen.ipynb
proj2/results/.ipynb_checkpoints/: relat_chen-checkpoint.ipynb
proj3/: CMakeLists.txt  README.txt  a.out  main.cu  main.cu.save  main.cu.save.1  test.cu  tsp-cpu-locsea.cpp  tsp-gpu-rand.cu
proj3/inputs/: in100  in200  in300  in400  in500
proj3/results/: relat_chen.ipynb
proj3/results/.ipynb_checkpoints/: relat_chen-checkpoint.ipynb
proj4/: CMakeLists.txt  README.md  a.out  exaust_enum.cpp  generator.py  hosts  loc_sea.cpp  test.cpp  tsp.py
proj4/inputs/: in1  in10  in11  in12  in14  in15  in2  in20  in3  in5  in7  in9
proj4/results/: cpu_par10.json  cpu_par11.json  cpu_par12.json  ex_enum.json  ex_enum10.json  ex_enum11.json  ex_enum12.json  loc_sea10.json  loc_sea11.json  loc_sea12.json  relat_chen.ipynb
